Bug 80191 - [SNA, SNB, TearFree] page flipping failed, disabling CRTC
Summary: [SNA, SNB, TearFree] page flipping failed, disabling CRTC
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-18 14:47 UTC by Leo Wolf
Modified: 2014-06-18 16:03 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg log (22.04 KB, text/plain)
2014-06-18 14:47 UTC, Leo Wolf
no flags Details
dmesg with drm.debug=0x06 (238.11 KB, text/plain)
2014-06-18 14:48 UTC, Leo Wolf
no flags Details
hopefully part of Xorg.0.log with full debug output (17.63 KB, text/plain)
2014-06-18 15:42 UTC, Leo Wolf
no flags Details

Description Leo Wolf 2014-06-18 14:47:01 UTC
Created attachment 101306 [details]
Xorg log

Since 3932e97 "sna/dri2: Allow TearFree flipping to individual CRTC", when using two monitors, one will turn off as soon as something like chromium is running in fullscreen.
Comment 1 Leo Wolf 2014-06-18 14:48:18 UTC
Created attachment 101308 [details]
dmesg with drm.debug=0x06
Comment 2 Chris Wilson 2014-06-18 15:00:45 UTC
commit e2bfa715a9e115921263d572b9f4c496b550a494
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jun 10 21:28:32 2014 +0100

    sna/dri2: Check that the window covers the whole CRTC before xchg
    
    Fixes TearFre regression from
    
    commit 3932e97057fca16615adaefbc1eb25a0d51a1d8b [2.99.912]
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Mon Jun 9 08:58:15 2014 +0100
    
        sna/dri2: Allow TearFree flipping to individual CRTC
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Leo Wolf 2014-06-18 15:37:09 UTC
Hmm, this happens on current git. Also the window does cover the whole crtc. 

This consistently fails: Start glxgears, move it to the second monitor, put it in fullscreen, put it out of fullscreen. Screen switches off.
Comment 4 Leo Wolf 2014-06-18 15:42:31 UTC
Created attachment 101312 [details]
hopefully part of Xorg.0.log with full debug output
Comment 5 Chris Wilson 2014-06-18 15:56:48 UTC
Ah, jumped to a conclusion as the kernel log seemed familiar.

This should fix it:

commit 83c0f034454ef0f474126a3398e5e790ac5ef842
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jun 18 16:51:46 2014 +0100

    sna: Pass desired CRTC viewport for completing single CRTC flips
    
    We cannot simply compare against the crtc->shadow_bo for all our needs,
    so pass in exactly the setup we want and apply that. In particular this
    is required when flipping away from the single CRTC setup on secondary
    pipes.
    
    Fixes TearFree multi-monitor regression from
    commit 3932e97057fca16615adaefbc1eb25a0d51a1d8b [2.99.912]
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Mon Jun 9 08:58:15 2014 +0100
    
        sna/dri2: Allow TearFree flipping to individual CRTC
    
    Reported-by: Leo Wolf <jclw@ymail.com>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=80191
Comment 6 Leo Wolf 2014-06-18 16:03:51 UTC
Yes, that works. Thank you!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.